--- a/src/app/components/Feeds/Feeds.module.css
+++ b/src/app/components/Feeds/Feeds.module.css
@@ -28,6 +28,6 @@
 
 @media screen and (min-width: 1200px) {
   .feeds {
-    flex: 1;
+    width: 50%;
   }
 }
