--- a/src/app/components/LineChart/LineChart.module.css
+++ b/src/app/components/LineChart/LineChart.module.css
@@ -1,6 +1,5 @@
 .chart {
   margin-bottom: 25px;
-  /* max-width: 1000px; */
 }
 
 .chart h3 {
@@ -9,6 +8,6 @@
 
 @media screen and (min-width: 1200px) {
   .chart {
-    flex: 1;
+    width: 50%;
   }
 }
